# openstudio

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/ai-helper/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/models/: issue.rs  mod.rs  project.rs  project_status.rs
crates/core/src/repositories/: in_memory.rs  issue_repository.rs  mod.rs  project_repository.rs
crates/core/tests/: project_test.rs
crates/db/: Cargo.toml
crates/db/src/: in_memory.rs
crates/openstudio-core/: Cargo.toml
crates/openstudio-core/src/: lib.rs
crates/openstudio-core/src/models/: mod.rs  project_status.rs  user.rs
crates/openstudio-core/src/repositories/: in_memory_issue.rs  in_memory_user.rs  mod.rs
crates/openstudio-core/src/usecases/: project.rs
crates/openstudio-core/tests/: project_test.rs
services/api-gateway/: Cargo.toml  curl-examples.sh
services/api-gateway/src/: main.rs
services/api-gateway/src/routes/: auth.rs  issue.rs  member.rs  mod.rs  project.rs  user.rs
services/api-gateway/tests/: api_jwt.rs
