[workspace.dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10", features = ["typed-header"] }
[workspace]
members = [
    "crates/openstudio-core",
    "crates/db",
    "crates/github",
    "crates/ai-helper",
    "crates/common",
    "services/api-gateway",
    "services/scheduler"
]

resolver = "2"
