
[package]
name = "openstudio-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }


[dev-dependencies]
db = { path = "../db" }
chrono = "0.4"
uuid = "1"