[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core = { path = "../../crates/core" }
hyper = "1.6.0"
chrono = "0.4"
