
[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
rand_core = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
axum = "0.8.4"
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openstudio-core = { path = "../../crates/openstudio-core" }
hyper = "1.6.0"
chrono = "0.4"
jsonwebtoken = "9"
headers = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

async-trait = "0.1"
argon2 = "0.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
